--- a/MovieProject/Base.lproj/Main.storyboard
+++ b/MovieProject/Base.lproj/Main.storyboard
@@ -46,7 +46,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="3Dg-wj-Tnx">
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="3Dg-wj-Tnx" userLabel="Main View">
                                 <rect key="frame" x="0.0" y="59" width="393" height="759"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="1Ap-Py-ugh">
@@ -59,16 +59,27 @@
                                         <rect key="frame" x="0.0" y="265" width="393" height="494"/>
                                         <subviews>
                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="KeZ-a6-7YF">
-                                                <rect key="frame" x="15" y="0.0" width="363" height="125.33333333333333"/>
+                                                <rect key="frame" x="15" y="0.0" width="363" height="303.33333333333331"/>
                                                 <subviews>
-                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9N8-gj-Ba1">
-                                                        <rect key="frame" x="0.0" y="0.0" width="363" height="24"/>
-                                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
-                                                        <nil key="textColor"/>
-                                                        <nil key="highlightedColor"/>
-                                                    </label>
-                                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" translatesAutoresizingMaskIntoConstraints="NO" id="C3j-EP-1S8">
-                                                        <rect key="frame" x="0.0" y="29" width="363" height="20.333333333333329"/>
+                                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="equalCentering" translatesAutoresizingMaskIntoConstraints="NO" id="Eac-5E-rI9">
+                                                        <rect key="frame" x="0.0" y="0.0" width="363" height="21.666666666666668"/>
+                                                        <subviews>
+                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" adjustsFontForContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="9N8-gj-Ba1">
+                                                                <rect key="frame" x="0.0" y="0.0" width="47" height="21.666666666666668"/>
+                                                                <fontDescription key="fontDescription" type="boldSystem" pointSize="18"/>
+                                                                <nil key="textColor"/>
+                                                                <nil key="highlightedColor"/>
+                                                            </label>
+                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" adjustsFontForContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="WV9-pU-H0k" userLabel="Runtime Label">
+                                                                <rect key="frame" x="316" y="0.0" width="47" height="21.666666666666668"/>
+                                                                <fontDescription key="fontDescription" type="boldSystem" pointSize="18"/>
+                                                                <nil key="textColor"/>
+                                                                <nil key="highlightedColor"/>
+                                                            </label>
+                                                        </subviews>
+                                                    </stackView>
+                                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" translatesAutoresizingMaskIntoConstraints="NO" id="C3j-EP-1S8" userLabel="Star and Date">
+                                                        <rect key="frame" x="0.0" y="26.666666666666686" width="363" height="20.333333333333329"/>
                                                         <subviews>
                                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="MPg-gL-uSZ" userLabel="LeadingContainer">
                                                                 <rect key="frame" x="0.0" y="0.0" width="71.333333333333329" height="20.333333333333332"/>
@@ -105,8 +116,8 @@
                                                             </stackView>
                                                         </subviews>
                                                     </stackView>
-                                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" translatesAutoresizingMaskIntoConstraints="NO" id="lec-3F-LGV">
-                                                        <rect key="frame" x="0.0" y="54.333333333333321" width="363" height="20.333333333333336"/>
+                                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" translatesAutoresizingMaskIntoConstraints="NO" id="lec-3F-LGV" userLabel="Budget and Revenue">
+                                                        <rect key="frame" x="0.0" y="52" width="363" height="20.333333333333329"/>
                                                         <subviews>
                                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="Hc2-rj-Kev" userLabel="LeadingContainer">
                                                                 <rect key="frame" x="0.0" y="0.0" width="75" height="20.333333333333332"/>
@@ -143,8 +154,8 @@
                                                             </stackView>
                                                         </subviews>
                                                     </stackView>
-                                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" translatesAutoresizingMaskIntoConstraints="NO" id="eAc-E4-bXY">
-                                                        <rect key="frame" x="0.0" y="79.666666666666686" width="363" height="20.333333333333329"/>
+                                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" translatesAutoresizingMaskIntoConstraints="NO" id="eAc-E4-bXY" userLabel="Genres">
+                                                        <rect key="frame" x="0.0" y="77.333333333333314" width="363" height="20.333333333333329"/>
                                                         <subviews>
                                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kbW-4X-qdt" userLabel="Genres">
                                                                 <rect key="frame" x="0.0" y="0.0" width="363" height="20.333333333333332"/>
@@ -155,11 +166,36 @@
                                                         </subviews>
                                                     </stackView>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EnL-3w-16e" userLabel="Movie Overview">
-                                                        <rect key="frame" x="0.0" y="105" width="363" height="20.333333333333329"/>
+                                                        <rect key="frame" x="0.0" y="102.66666666666669" width="363" height="20.333333333333329"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                         <color key="textColor" systemColor="systemGrayColor"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Cast" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="v9i-Ov-iht" userLabel="Cast">
+                                                        <rect key="frame" x="0.0" y="127.99999999999999" width="363" height="20.333333333333329"/>
+                                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                                                        <nil key="textColor"/>
+                                                        <nil key="highlightedColor"/>
+                                                    </label>
+                                                    <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="TxL-ES-DlI">
+                                                        <rect key="frame" x="0.0" y="153.33333333333331" width="363" height="150"/>
+                                                        <subviews>
+                                                            <stackView opaque="NO" contentMode="scaleToFill" alignment="top" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="c2p-pn-TZe">
+                                                                <rect key="frame" x="0.0" y="0.0" width="363" height="150"/>
+                                                            </stackView>
+                                                        </subviews>
+                                                        <constraints>
+                                                            <constraint firstItem="c2p-pn-TZe" firstAttribute="height" secondItem="kVH-53-ibe" secondAttribute="height" id="6OL-LP-hh6"/>
+                                                            <constraint firstItem="c2p-pn-TZe" firstAttribute="width" secondItem="kVH-53-ibe" secondAttribute="width" priority="250" id="J7m-Iv-XVZ"/>
+                                                            <constraint firstItem="c2p-pn-TZe" firstAttribute="trailing" secondItem="djt-nT-6qY" secondAttribute="trailing" constant="363" id="UXJ-zb-QsV"/>
+                                                            <constraint firstItem="c2p-pn-TZe" firstAttribute="top" secondItem="djt-nT-6qY" secondAttribute="top" id="apV-HN-4be"/>
+                                                            <constraint firstItem="c2p-pn-TZe" firstAttribute="leading" secondItem="djt-nT-6qY" secondAttribute="leading" id="bgL-Yx-NMJ"/>
+                                                            <constraint firstAttribute="height" constant="150" id="dSd-21-EHr"/>
+                                                            <constraint firstItem="c2p-pn-TZe" firstAttribute="bottom" secondItem="djt-nT-6qY" secondAttribute="bottom" id="xdi-GC-BFv"/>
+                                                        </constraints>
+                                                        <viewLayoutGuide key="contentLayoutGuide" id="djt-nT-6qY"/>
+                                                        <viewLayoutGuide key="frameLayoutGuide" id="kVH-53-ibe"/>
+                                                    </scrollView>
                                                 </subviews>
                                             </stackView>
                                         </subviews>
@@ -172,24 +208,46 @@
                                     </view>
                                 </subviews>
                             </stackView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="A43-ZK-KTT" userLabel="Loading View">
+                                <rect key="frame" x="0.0" y="59" width="393" height="759"/>
+                                <subviews>
+                                    <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" animating="YES" style="large" translatesAutoresizingMaskIntoConstraints="NO" id="qgE-RA-Co4">
+                                        <rect key="frame" x="178" y="361" width="37" height="37"/>
+                                        <color key="color" systemColor="labelColor"/>
+                                    </activityIndicatorView>
+                                </subviews>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstItem="qgE-RA-Co4" firstAttribute="centerY" secondItem="A43-ZK-KTT" secondAttribute="centerY" id="6ZZ-Nt-k8l"/>
+                                    <constraint firstItem="qgE-RA-Co4" firstAttribute="centerX" secondItem="A43-ZK-KTT" secondAttribute="centerX" id="K4s-bB-bAd"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="lQH-yh-wRo"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="3Dg-wj-Tnx" firstAttribute="top" secondItem="lQH-yh-wRo" secondAttribute="top" id="2er-cv-Ouy"/>
                             <constraint firstItem="3Dg-wj-Tnx" firstAttribute="leading" secondItem="lQH-yh-wRo" secondAttribute="leading" id="3q2-iL-9qb"/>
+                            <constraint firstItem="lQH-yh-wRo" firstAttribute="trailing" secondItem="A43-ZK-KTT" secondAttribute="trailing" id="GVw-T6-1OH"/>
+                            <constraint firstItem="A43-ZK-KTT" firstAttribute="top" secondItem="lQH-yh-wRo" secondAttribute="top" id="U32-Hv-aCU"/>
                             <constraint firstItem="lQH-yh-wRo" firstAttribute="trailing" secondItem="3Dg-wj-Tnx" secondAttribute="trailing" id="Xdp-41-CVU"/>
+                            <constraint firstItem="lQH-yh-wRo" firstAttribute="bottom" secondItem="A43-ZK-KTT" secondAttribute="bottom" id="fYx-Wx-ct3"/>
+                            <constraint firstItem="A43-ZK-KTT" firstAttribute="leading" secondItem="lQH-yh-wRo" secondAttribute="leading" id="sNw-cM-nr0"/>
                             <constraint firstItem="lQH-yh-wRo" firstAttribute="bottom" secondItem="3Dg-wj-Tnx" secondAttribute="bottom" id="tY1-Z4-Ghn"/>
                         </constraints>
                     </view>
                     <connections>
-                        <outlet property="budgetLabel" destination="rnP-ma-ehy" id="eG8-zI-WMm"/>
+                        <outlet property="budgetLabel" destination="rnP-ma-ehy" id="KRQ-5l-KqA"/>
+                        <outlet property="castStackView" destination="c2p-pn-TZe" id="KyP-7H-X5a"/>
                         <outlet property="genresLabel" destination="kbW-4X-qdt" id="kkP-tH-Ood"/>
+                        <outlet property="loadingIndicator" destination="qgE-RA-Co4" id="MJD-Rp-9hu"/>
+                        <outlet property="loadingView" destination="A43-ZK-KTT" id="kGZ-xt-czS"/>
                         <outlet property="movieNameLabel" destination="9N8-gj-Ba1" id="VR4-MA-40j"/>
                         <outlet property="movieOverviewLabel" destination="EnL-3w-16e" id="ky1-An-Y9F"/>
                         <outlet property="moviePosterImageView" destination="1Ap-Py-ugh" id="ftW-eS-oao"/>
                         <outlet property="releaseDateLabel" destination="tos-1m-qqh" id="QeS-2i-ri5"/>
-                        <outlet property="revenueLabel" destination="hr1-IT-DKb" id="N8T-hV-8jX"/>
+                        <outlet property="revenueLabel" destination="hr1-IT-DKb" id="Nd3-tz-toZ"/>
+                        <outlet property="runtimeLabel" destination="WV9-pU-H0k" id="Rb5-79-CIl"/>
                         <outlet property="voteAverageLabel" destination="RmY-jN-hds" id="eSP-NQ-6yd"/>
                     </connections>
                 </viewController>
@@ -241,6 +299,9 @@
         <image name="dollarsign.arrow.circlepath" catalog="system" width="128" height="112"/>
         <image name="play.rectangle.on.rectangle.fill" catalog="system" width="128" height="98"/>
         <image name="star" catalog="system" width="128" height="116"/>
+        <systemColor name="labelColor">
+            <color red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
